--- a/CPP/GhostLight/GhostLight/GhostLight.vcxproj
+++ b/CPP/GhostLight/GhostLight/GhostLight.vcxproj
@@ -144,6 +144,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="base64.h" />
+    <ClInclude Include="ghostcalls.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ghostcalls.asm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
