update project files to include assembly syscalls

--- a/CPP/GhostLight/GhostLight/GhostLight.vcxproj.filters
+++ b/CPP/GhostLight/GhostLight/GhostLight.vcxproj.filters
@@ -31,8 +31,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ghostcalls.asm">
+    <MASM Include="ghostcalls.asm">
       <Filter>Source Files</Filter>
-    </None>
+    </MASM>
   </ItemGroup>
 </Project>
