--- a/CPP/GhostLight/GhostLight/GhostLight.vcxproj
+++ b/CPP/GhostLight/GhostLight/GhostLight.vcxproj
@@ -54,6 +54,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.props" />
   </ImportGroup>
   <ImportGroup Label="Shared">
   </ImportGroup>
@@ -147,9 +148,12 @@
     <ClInclude Include="ghostcalls.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ghostcalls.asm" />
+    <MASM Include="ghostcalls.asm">
+      <FileType>Document</FileType>
+    </MASM>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
   </ImportGroup>
 </Project>
