--- a/CPP/BlackLight/BlackLight/BlackLight.vcxproj.filters
+++ b/CPP/BlackLight/BlackLight/BlackLight.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClInclude Include="base64.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="syscalls2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <MASM Include="syscalls2.asm">
+      <Filter>Source Files</Filter>
+    </MASM>
   </ItemGroup>
 </Project>
