Set up lightwave to use the base64 files in _resources

--- a/CPP/Lightwave/Lightwave/Lightwave.vcxproj
+++ b/CPP/Lightwave/Lightwave/Lightwave.vcxproj
@@ -117,6 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\_resources;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,11 +141,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\_resources\base64.cpp" />
     <ClCompile Include="Lightwave.cpp" />
-    <ClCompile Include="base64.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="base64.h" />
+    <ClInclude Include="..\..\_resources\base64.h" />
     <ClInclude Include="syscalls4.h" />
   </ItemGroup>
   <ItemGroup>
