--- a/CPP/GhostLight/GhostLight/GhostLight.vcxproj
+++ b/CPP/GhostLight/GhostLight/GhostLight.vcxproj
@@ -131,6 +131,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\_resources;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,11 +141,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="base64.cpp" />
+    <ClCompile Include="..\..\_resources\base64.cpp" />
     <ClCompile Include="GhostLight.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="base64.h" />
+    <ClInclude Include="..\..\_resources\base64.h" />
     <ClInclude Include="ghostcalls.h" />
   </ItemGroup>
   <ItemGroup>
