added decryption routines

--- a/CPP/_tests/_tests/_tests.vcxproj.filters
+++ b/CPP/_tests/_tests/_tests.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="..\..\_resources\sandbox_detection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\_resources\decryption.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\_resources\sandbox_detection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\_resources\decryption.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
