--- a/CPP/GhostLight/GhostLight/GhostLight.vcxproj
+++ b/CPP/GhostLight/GhostLight/GhostLight.vcxproj
@@ -117,6 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)\..\_resources;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -142,10 +143,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\_resources\base64.cpp" />
+    <ClCompile Include="..\..\_resources\decryption.cpp" />
     <ClCompile Include="GhostLight.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\_resources\base64.h" />
+    <ClInclude Include="..\..\_resources\decryption.h" />
     <ClInclude Include="ghostcalls.h" />
   </ItemGroup>
   <ItemGroup>
