--- a/CPP/GhostLight/GhostLight/GhostLight.vcxproj.filters
+++ b/CPP/GhostLight/GhostLight/GhostLight.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="..\..\_resources\base64.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\_resources\decryption.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ghostcalls.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\_resources\base64.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\_resources\decryption.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
