--- a/CPP/BlackLight/BlackLight/BlackLight.vcxproj
+++ b/CPP/BlackLight/BlackLight/BlackLight.vcxproj
@@ -143,10 +143,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\_resources\base64.cpp" />
+    <ClCompile Include="..\..\_resources\decryption.cpp" />
     <ClCompile Include="BlackLight.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\_resources\base64.h" />
+    <ClInclude Include="..\..\_resources\decryption.h" />
     <ClInclude Include="syscalls2.h" />
   </ItemGroup>
   <ItemGroup>
